# LLMFirewall

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
attackgen/: generate_attacks.py  mutate.py
backend/: agent.py  policy_engine.py  pyproject.toml  transcript.py
backend/tests/: test_sanity.py
data/: attacks_mutated.jsonl  attacks_seed.jsonl.bak  benign.jsonl  eval_dataset.jsonl
docs/: spec.md
eval/: generate_seed_dataset.py  report.json  report.md  report.py  run.py
